--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.icon {
+		@apply hidden xl:inline-flex transition duration-300
+			p-2 h-10 w-10
+			bg-gray-200 rounded-full text-gray-700
+			cursor-pointer hover:bg-gray-300;
+	}
+}
